nix-build failed. Testing if nix build fixes it.

--- a/.github/workflows/cachix-push.yml
+++ b/.github/workflows/cachix-push.yml
@@ -35,5 +35,5 @@ jobs:
         # Filters the encrypted secrets derivation from going into the public cache.
         pushFilter: "(dotnix-secrets)"
       
-    - run: nix-build
+    - run: nix build
     - run: nix-shell --run "echo OK"
