Modified cachix action so it caches my main config.

--- a/.github/workflows/cachix-push.yml
+++ b/.github/workflows/cachix-push.yml
@@ -33,7 +33,10 @@ jobs:
 
         # Not sure if this is needed, but my mind rests in peace knowing it's there.
         # Filters the encrypted secrets derivation from going into the public cache.
-        pushFilter: "(dotnix-secrets)"
-      
-    - run: nix build
+        pushFilter: (dotnix-secrets)
+
+        extraPullNames: nix-community
+
+      # Build and cache my main NixOS configuration.
+    - run: nix build .#nixosConfigurations.atlas.config.system.build.toplevel
     - run: nix-shell --run "echo OK"
