--- a/.github/workflows/cachix-push.yml
+++ b/.github/workflows/cachix-push.yml
@@ -17,6 +17,11 @@ jobs:
 
     # Checkout the repository contents.
     - uses: actions/checkout@v3
+
+      # To allow subsequent steps to access the private SSH keys needed during the build process.
+    - uses: webfactory/ssh-agent@v0.8.0
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
     
     # Install the Nix Package manager.
     - uses: cachix/install-nix-action@v20
