--- a/.github/workflows/cachix-push.yml
+++ b/.github/workflows/cachix-push.yml
@@ -38,7 +38,7 @@ jobs:
 
         # Not sure if this is needed, but my mind rests in peace knowing it's there.
         # Filters the encrypted secrets derivation from going into the public cache.
-        pushFilter: (dotnix-secrets)
+        pushFilter: dotnix-secrets
 
         extraPullNames: nix-community
 
