--- a/.github/workflows/cachix.yml
+++ b/.github/workflows/cachix.yml
@@ -35,12 +35,15 @@ jobs:
 
         name: dotnix
         authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+        extraPullNames: nix-community
 
         # Not sure if this is needed, but my mind rests in peace knowing it's there.
         # Filters the encrypted secrets derivation from going into the public cache.
-        pushFilter: dotnix-secrets
+        pushFilter: "(dotnix-secrets$)"
 
-        extraPullNames: nix-community
+        # Ensure this is empty for the pushFilter to work as expected.
+        # See: https://github.com/cachix/cachix-action/blob/6a2e08b5ebf7a9f285ff57b1870a4262b06e0bee/action.yml#L18
+        pathsToPush: ""
 
       # Build and cache my main NixOS configuration (See 'Internals' section of: https://nixos.wiki/wiki/Nixos-rebuild).
     - run: nix build .#nixosConfigurations.atlas.config.system.build.toplevel
